
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Heading"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/textView"
        android:layout_margin="10sp" />

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:onClick="launchApp"/>

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:onClick="launchApp"/>

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:onClick="launchApp"/>

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:onClick="launchApp"/>

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:onClick="launchApp"/>

    <Button
        style="@style/Nanodegreebutton"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/button6"
        android:onClick="launchApp"/>
</LinearLayout>
</RelativeLayout>
